--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <title>aFrame Starter Template - DAT515</title>
 </head>
 
 <body>
+
+    <a-assets>
+        <img id="Floor" src="Assets/Textures/FloorTextures/FloorTexture.jpg"/>
+        <img id="Floor2" src="Assets/Textures/FloorTextures/FloorTexture_NRM2_Base Color.jpg"/>
+        <img id="Floor3" src="Assets/Textures/FloorTextures/FloorTexture_NRM3_Base Color.jpg"/>
+
+        <img id="FloorNRM" src="assets/Textures/FloorTextures/FloorTexture_NRM_Normal.jpg" />
+        <img id="FloorNRM2"src="assets/Textures/FloorTextures/FloorTexture_NRM_Normal/FloorTexture_NRM2_Normal"/>
+        <img id="FloorNRM3"src="assets/Textures/FloorTexture/FloorTexture_NRM_Normal/FloorTexture_NRM3_Normal"/>
+    </a-assets>
+    
     <a-scene>
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+        <!-- <a-box position="0 1.5 -3" scale="2 2 2" repeat="2 2"  normal-texture-repeat="2 2" rotation="0 0 0" color="#fff" normal-map="#FloorNRM" shader: flat; src="#Floor" ></a-box> -->
+       <a-plane color="#fff" shader: flat; src="#Floor3" scale="100 100 1" normal-map="#FloorNRM3" rotation="-90 0 0" repeat="50 50" normal-texture-reaeat=" 50 50 "></a-plane>
+       <a-plane  position="100 100 100"color="#fff" shader: flat; src="#Floor3" scale="100 100 1" normal-map="#FloorNRM3" rotation="-90 0 0" repeat="50 50" normal-texture-reaeat=" 50 50 "></a-plane>
         <a-sky color="#ECECEC"></a-sky>
       </a-scene>
     
